# bonded_substructures

./: .gitignore  10_copv_nonlinear_rom.py  11_test_contact_fix.py  12_visualize_rom_wavefield.py  COMPLETE_CAPABILITIES_SUMMARY.md  COPV_VISUALIZATION_SUMMARY.md  DOCUMENTATION.md  GITHUB_SETUP.md  HARMONIC_BALANCE_AFT_GUIDE.md  INSTALL.md  LICENSE  README.md  ROM_CONTACT_FIX_SUMMARY.md  ROM_SIMULATION_RESULTS.md  TEST_RESULTS_SUMMARY.md  pyproject.toml  run_all_examples.sh  run_core_examples.sh  visualize_copv.py  visualize_copv_pyvista.py
.github/: copilot-instructions.md
examples/: 01_bonded_plate_basic.py  01_rectangle_basic.py  02_bonded_plate_disbond.py  02_rectangle_disbond.py  03_visualize_mesh.py  04_bonded_cylinder_basic.py  04_nonconformal_disbond.py  05_bonded_cylinder_disbond.py  05_craig_bampton_reduction.py  06_harmonic_response.py  06_visualize_cylinder.py  07_wide_plate_disbond.py  08_time_domain_response.py  09_nonlinear_harmonic_contact.py
src/bonded_substructures/: __init__.py
src/bonded_substructures/geometry/: __init__.py  base.py  cylinder.py  rectangle.py
src/bonded_substructures/materials/: __init__.py  properties.py
src/bonded_substructures/mesh/: __init__.py  duplicate_nodes.py  markers.py
src/bonded_substructures/rom/: __init__.py  craig_bampton.py  harmonic_balance.py
src/bonded_substructures/solver/: __init__.py  linear.py
tests/: __init__.py  conftest.py  test_contact_enforcement.py
tests/test_geometry/: test_cylinder.py  test_rectangle.py
tests/test_mesh/: __init__.py  test_markers.py
(+3 files in other folders)
